--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 var vm = new Vue({
   el: "#app",
   data: {
-    showPageContent: true
+    showPageContent: false
   },
   methods: {
     togglePageContent: function() {
